Fix spacing on sidebar

--- a/ospo-book/assets/scss/_search.scss
+++ b/ospo-book/assets/scss/_search.scss
@@ -8,7 +8,7 @@
 		padding-top: 0.5rem !important;
 		padding-left: 1.5rem;
 		padding-right: 1rem;
-		padding-bottom: 5px;
+		padding-bottom: 25px;
 	}
 	@media (min-width: 1300px) {
 		padding-left: 2.5rem;
